--- a/css/small.css
+++ b/css/small.css
@@ -1,19 +1,51 @@
-/* ---------- Body ---------- */
-body{
+@import url('https://fonts.googleapis.com/css?family=Karla:400,700|Oxygen:400,700&display=swap');
+
+/* ----- body ----- */
+body {
     background-color: azure;
+    color: #23292e;
+    font-family: 'Karla', sans-serif;
 }
 
-/* ---------- Header ---------- */
-header{
-    display: flex;
+.bold {
+    font-weight: bold;
+}
+
+.center {
     text-align: center;
-    background-color: blanchedalmond;
+    align-self: center;
+
 }
 
-/* ---------- Nav ----------*/
+.italic {
+    font-style: italic;
+}
+
+
+
+/* ----- header ----- */
+header {
+    background-color: blanchedalmond;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    margin: 0;
+    font-family: 'Oxygen', sans-serif;
+}
+
+.logo {
+    border: 1px solid #23292e;
+    border-radius: 10px;
+    margin-right: 10px;
+    max-width: 100px;
+}
+
+/* ----- nav ----- */
 nav {
     background-color: lightseagreen;
     text-align: center;
+    font-family: 'Oxygen', sans-serif;
 }
 
 .navigation,
@@ -25,11 +57,54 @@ nav {
     flex-flow: column;
 }
 
-/* ---------- Main ---------- */
-main {
-
+.navigation li,
+.subNav {
+    display: none;
 }
 
+#menu {
+    display: block;
+}
+
+.responsive li,
+.subResponsive {
+    display: block;
+}
+
+.navigation a {
+    display: block;
+    padding: 0.8rem 2%;
+    text-decoration: none;
+    color: #23292e;
+    border-top: 1px solid rgba(0, 0, 0, 0.3)
+}
+
+.navigation li a.active {
+    color: #3e4044;
+    background-color: rgba(255, 255, 255, .3);
+}
+
+.navigation .subResponsive {
+    background-color: rgba(255, 255, 255, .1);
+    width: 90%;
+    display: flex;
+    flex-flow: column;
+    margin: 0 auto;
+    border-right: 1px solid rgba(0, 0, 0, 0.3);
+    border-left: 1px solid rgba(0, 0, 0, 0.3);
+}
+
+/* ----- main ----- */
+main {
+    margin: 0 auto;
+    max-width: 960px;
+    width: 95%;
+}
+
+main h2 {
+    padding: 0 20px;
+    font-family: 'Oxygen', sans-serif;
+}
 
 .placeholder {
     background-color: lightgray;
@@ -39,7 +114,175 @@ main {
     border-radius: 10px;
 }
 
-/* ---------- Footer ---------- */
+.contentbox {
+    border: 1px solid #23292e;
+    border-radius: 10px;
+    padding: 20px;
+    margin-top: 10px;
+    background-color: rgba(255, 255, 255, .5);
+    display: flex;
+    flex-direction: column;
+}
+
+.temples h3 {
+    order: -1
+}
+
+.sidebyside .leftcol, .sidebyside .rightcol {
+    text-align: center;
+}
+
+.right {
+    width: 100%;
+}
+
+.contentbox h3 {
+    margin: 0;
+    font-family: 'Oxygen', sans-serif;
+}
+
+.hide {
+    display: none;
+}
+
+
+
+.button a {
+    background-color: #dcc845;
+    max-width: fit-content;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+
+.button a:hover {
+    background-color: #eedb63;
+    color: #3e4044;
+}
+
+.button {
+    padding: 10px;
+}
+
+main img {
+    padding: 10px 0;
+    width: 100%;
+}
+
+.closeAll {
+    padding-left: 20px;
+}
+
+
+.contentbox h3 {
+    order: -1;
+}
+
+iframe {
+    order: 0;
+    width:100%;
+    height: 400px;
+    border: none;
+}
+
+
+/* ----- form ----- */
+form {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+}
+
+form fieldset {
+    margin: 2rem 0;
+    border: 1px solid #dcc845;
+    border-radius: 10px;
+    padding: 0.5rem 2%;
+}
+
+form legend {
+    color: #3e4044;
+    margin: 0 1rem;
+    padding: 0 .5rem;
+}
+
+form label.top,
+form div {
+    display: block;
+    padding-top: 1rem;
+    color: #182944;
+
+}
+
+form label.top input,
+form label.top select,
+form label.top textarea {
+    -webkit-appearance: none;
+    display: block;
+    border: solid 1px #999;
+    border-radius: 4px;
+    padding: .4rem .75rem;
+    color: #3e4044;
+    width: 100%;
+    max-width: 30rem;
+    background-color: rgba(0, 0, 0, 0.1);
+    height: 40px;
+    box-sizing: border-box;
+    font-size: .9rem;
+}
+
+form label.sbs {
+    display: block;
+    padding: 0.75rem 0;
+    color: #3e4044;
+
+}
+
+form label.top textarea {
+    height: 10em;
+}
+
+form input.submitBtn {
+    border: none;
+    background-color: #dcc845;
+    color: #23292e;
+    border-radius: 10px;
+    padding: .75rem 1.5rem;
+    margin: 0 0 2rem 2%;
+    width: 100%;
+    max-width: 30rem;
+}
+
+form input.submitBtn:hover {
+    background-color: #eedb63;
+    color: #3e4044;
+}
+
+form label.top input:required {
+    border-left: red solid 2px;
+}
+
+form label.top input:required:valid {
+    border-left: green solid 2px;
+}
+
+form input:invalid {
+    border: 6px solid red;
+}
+
+
+/* ----- footer ----- */
 footer {
     background-color: blanchedalmond;
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    text-decoration: none;
+    margin: 0 auto;
+    max-width: 960px;
+    width: 95%;
+    border-radius: 10px;
+    margin-top: 10px;
 }
